Refactoring and Polish; Added points history, changed gui, added some colors, changed the snake's list to thread-safe deque to avoid concurrent modification exceptions;